[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Rank/SCRIPT_Rank.gd" type="Script" id=1]
[ext_resource path="res://Fonts/limbo_font__by_alex484000-d5dthys.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/Background/unity small.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 2 )

[node name="Rank" type="Node2D"]
script = ExtResource( 1 )

[node name="Rank_Nome" type="HTTPRequest" parent="."]

[node name="Rank_Level" type="HTTPRequest" parent="."]

[node name="Rank_Pontos" type="HTTPRequest" parent="."]

[node name="Rank_Pos" type="HTTPRequest" parent="."]

[node name="Background_A" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_B" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.0784314 )
position = Vector2( 640, 436 )
scale = Vector2( 6.4, 4.62016 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 0.613
margin_left = 352.0
margin_top = 184.0
margin_right = 1088.0
margin_bottom = 472.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 471.0
margin_bottom = 24.0
custom_constants/separation = 79
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Posicao" type="Label" parent="ScrollContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "[pos]"

[node name="Label_Name" type="Label" parent="ScrollContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 169.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="Label_Level" type="Label" parent="ScrollContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 313.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "[LEVEL]"

[node name="Label_Pontos" type="Label" parent="ScrollContainer/HBoxContainer"]
margin_left = 392.0
margin_right = 471.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "[PONTOS]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sessao" type="Label" parent="."]
margin_left = 472.0
margin_top = 144.0
margin_right = 896.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 4 )
text = "NOME              LEVEL    PONTOS"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="Rank_Nome" to="." method="Nome_request_completed"]
[connection signal="request_completed" from="Rank_Level" to="." method="Level_request_completed"]
[connection signal="request_completed" from="Rank_Pontos" to="." method="Pontos_request_completed"]
[connection signal="request_completed" from="Rank_Pos" to="." method="_on_Rank_Pos_request_completed"]
